fixed sizing of landing page 'people' to prevent clipping & lowered detail section

--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -1,4 +1,5 @@
 .details {
+    margin-top: 45px;
     position: relative;
     z-index: 3;
     grid-column: 3/11;
