--- a/styles/_landing.scss
+++ b/styles/_landing.scss
@@ -158,7 +158,10 @@
             width: 45%;
         }
         &__girl {
-            margin-bottom: 25px;
+            margin-bottom: -25px;
+        }
+        &__boy {
+            margin-bottom: -50px;
         }
 
         @media screen and (max-width: 1325px) {
